# wSnowflake

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  test.yml  typecheck.yml
docker/: README.md
docs/: Makefile  README.md  bibliography.rst  conf.py  faq.rst  glossary.rst  index.rst
docs/api_reference/: README.md  builders.rst  connection.rst  exceptions.rst  index.rst  repository.rst  sync.rst
docs/getting_started/: README.md  index.rst  installation.rst  quickstart.rst
docs/tutorials/: README.md  advanced_queries.rst  basic_operations.rst  index.rst  transactions.rst
examples/: README.md
examples/01_connection/: README.md  example.py
examples/01_crud/: README.md
examples/02_crud/: README.md  example.py
examples/03_queries/: README.md  example.py
examples/04_pagination/: README.md  example.py
examples/04_transactions/: README.md  example.py
examples/05_sync/: README.md  example.py
examples/05_transactions/: README.md  example.py
examples/06_bulk_operations/: README.md  example.py
examples/07_logging/: README.md  example.py
examples/08_joins/: README.md  example.py
examples/09_aggregations/: README.md  example.py
examples/10_subqueries/: README.md  example.py
examples/11_window_functions/: README.md  example.py
examples/12_advanced_queries/: README.md  example.py
examples/13_temp_files/: README.md  example.py
examples/14_new_columns/: README.md  example.py
examples/15_restrictions/: README.md  example.py
examples/16_relationships/: README.md  example.py
examples/17_raw_sql/: README.md  example.py
examples/18_timestamps/: README.md  example.py
examples/19_soft_delete/: README.md  example.py
src/: README.md
src/wSnowflake/: README.md  __init__.py
src/wSnowflake/builders/: __init__.py  query_builder.py
src/wSnowflake/cli/: main.py
src/wSnowflake/core/: __init__.py  connection.py  repository.py  sync.py
src/wSnowflake/exceptions/: __init__.py
src/wSnowflake/types/: __init__.py  sql_types.py
stress_test/: README.md
test/: README.md
test/integration/: README.md
test/unit/: README.md  test_all.py  test_basics.py  test_exceptions.py  test_query_builder.py  test_repository.py  test_sql_injection.py  test_sync.py
